--- a/main/index.html
+++ b/main/index.html
@@ -369,7 +369,7 @@
                                 <div class="popup-content">
                                     <span class="close" id="closePopupBtn">&times;</span>
                                     <h2 style="font-size: 21px;">
-                                        تغيير الكميات المستهدفة لمدخلات لكل مركز
+                                        تغيير الكميات المستهدفة يوميا لمدخلات لكل مركز
                                     </h2>
                                     <form id="dataInputForm">
                                     </form>
